--- a/index.html
+++ b/index.html
@@ -22,9 +22,21 @@
     <!--Need to choose type if you want to compile with babel-->
     <script type="text/babel">
         const Main = () => {
-            //this is the comment for XML language
-            //In XML, if you wanna write class name, use className
-            return <div className="main-section">This is the main section of the page that I created.</div>
+            let name = "Zarn";
+            let age = 21;
+            let className = "main-class";
+            let clickMethod = () => {
+                alert("Hello "+name);
+            }
+            return (
+                <div className={className}>
+                    <h1>{name.toUpperCase()}</h1>
+                    <p>{age}</p>
+                    <p>{new Date().toDateString()}</p>
+                    <button onClick={clickMethod}>
+                        click me!
+                    </button>
+                </div>)
         }
 
         let rootContainer = document.getElementById('main');
